# wireless-xbox-to-switch-adapter

./: Cargo.toml  justfile
.cargo/: config.toml
src/: main.rs  switch.rs  xbox.rs
src/switch/: hid_descriptor.rs
