[package]
name = "wireless-xbox-to-switch-adapter"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.6", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2", features = ["defmt", "time-driver"] }
embassy-usb = "0.3.0"
embassy-futures = "0.1.1"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1

[profile.dev]
lto = true
