[package]
name = "wireless-xbox-to-switch-adapter"
version = "0.1.1"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.6", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2", features = ["defmt", "time-driver"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] }
embassy-futures = "0.1.1"
embassy-sync = "0.6.0"
serde = { version = "1.0", default-features = false, features = [
  "serde_derive",
] }
cyw43-pio = "0.2.0"
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }

usbd-hid = "0.8.2"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
bt-hci = { version = "0.1.0", default-features = false, features = ["defmt"] }
trouble-host = { version = "0.1.0", features = ["defmt", "gatt"] }

[patch.crates-io]
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "4b8c0f499b34e46ca23a56e2d1640ede371722cf" }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1

[profile.dev]
lto = true
