[package]
name = "wireless-xbox-to-switch-adapter"
version = "0.0.1"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.6", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2", features = [
  "defmt",
  "time-driver",
  "rp2040",
  "intrinsics",
] }
embassy-usb = { version = "0.3", features = ["defmt"] }
embassy-futures = "0.1"
embassy-sync = "0.6"
serde = { version = "1.0", default-features = false, features = [
  "serde_derive",
] }
cyw43-pio = "0.2"
cyw43 = { version = "0.2", features = [
  "defmt",
  "firmware-logs",
] } # , "bluetooth"

usbd-hid = "0.8.2"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
bt-hci = { version = "0.1.0", default-features = false, features = ["defmt"] }
trouble-host = { version = "0.1.0", features = ["defmt", "gatt"] }

[patch.crates-io]
usbd-hid = { git = "https://github.com/LegitCamper/usbd-hid" }

# embassy-usb = { git = "https://github.com/LegitCamper/embassy" }
embassy-usb = { path = "../embassy/embassy-usb" }
# embassy-rp = { git = "https://github.com/LegitCamper/embassy" }
embassy-rp = { path = "../embassy/embassy-rp" }
# embassy-time = { git = "https://github.com/LegitCamper/embassy" }
embassy-time = { path = "../embassy/embassy-time" }
# embassy-time-driver = { git = "https://github.com/LegitCamper/embassy" }
embassy-time-driver = { path = "../embassy/embassy-time-driver" }
# embassy-time-queue-driver = { git = "https://github.com/LegitCamper/embassy" }
embassy-time-queue-driver = { path = "../embassy/embassy-time-queue-driver" }

# These enable cyw24 bluetooth support 
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", rev = "31765f6bf34e79d8178ae1698da6b09c6e677b70" }
# cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "be6eec772673ae6c46a6a022838b78cdc167bae4" }
# embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "be6eec772673ae6c46a6a022838b78cdc167bae4" }

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1

[profile.dev]
lto = true
